--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <title>League Level Calculator</title>
+    <meta property="og:url" content="https://kwb-projects.github.io/LeaguePurityTest/" />
 </head>
 <body>
     
